@@ -1,0 +1,5 @@
+checking b.pdf
+PDF Version: 1.4
+File is not encrypted
+File is not linearized
+No errors found
